--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.7",
-    "astro": "^5.8.0",
-    "tailwindcss": "^4.1.7"
+    "astro": "^5.8.0"
   }
 }
